--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+  <div>
+    <p>Test</p>
+  </div>
+  <div class="menu-button" (click)="toggleActive()">
+    <svg class="ham hamRotate ham4" [class.active]="isActive" viewBox="0 0 100 100" width="80">
+      <path
+            class="line top"
+            d="m 70,33 h -40 c 0,0 -8.5,-0.149796 -8.5,8.5 0,8.649796 8.5,8.5 8.5,8.5 h 20 v -20" />
+      <path
+            class="line middle"
+            d="m 70,50 h -40" />
+      <path
+            class="line bottom"
+            d="m 30,67 h 40 c 0,0 8.5,0.149796 8.5,-8.5 0,-8.649796 -8.5,-8.5 -8.5,-8.5 h -20 v 20" />
+    </svg>
+  </div>
+
+</header>
