--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,56 @@
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 92px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 2;
+  background: #ad850c;
+  padding-left: 80px;
+  padding-right: 80px;
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 40px;
+    font-weight: 800;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .letterY {
+    position: relative;
+    left: 2px;
+  }
+
+  .letterF {
+    position: relative;
+    top: 8px;
+    right: 2px;
+  }
+}
+
+.logo {}
+
 .menu-button {
-cursor: pointer;
+  cursor: pointer;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: ease-in-out 180ms;
+  border-radius: 10px;
+  position: fixed;
+  top: 20px;
+  right: 80px;
+  z-index: 3;
+  &:hover{
+    background-color: #00000018;
+  }
 }
 
 .ham {
@@ -9,7 +60,6 @@ cursor: pointer;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  pointer-events: none;
 }
 .hamRotate.active {
   transform: rotate(45deg);
@@ -18,12 +68,11 @@ cursor: pointer;
   transform: rotate(180deg);
 }
 .line {
-  fill:none;
-  transition: stroke-dasharray 800ms, stroke-dashoffset 800ms;
-  stroke:#000;
-  stroke-width:5.5;
-  stroke-linecap:round;
-  pointer-events: auto;
+  fill: none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: #000;
+  stroke-width: 5.5;
+  stroke-linecap: round;
 }
 .ham4 .top {
   stroke-dasharray: 40 121;
@@ -36,4 +85,21 @@ cursor: pointer;
 }
 .ham4.active .bottom {
   stroke-dashoffset: -68px;
+}
+
+
+.menu {
+  position: fixed;
+  top: 91px;
+  left: 0;
+  width: 100%;
+  height: 70vh;
+  background: #fffcf3;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1;
+}
+
+.menu.active {
+  transform: translateY(0);
 }
