--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,7 +9,7 @@ header {
   right: 0;
   width: 100%;
   z-index: 2;
-  background: #ad850c;
+  background: #fffcf3;
   padding-left: 80px;
   padding-right: 80px;
   p {
@@ -34,7 +34,9 @@ header {
   }
 }
 
-.logo {}
+.logo {
+margin-bottom: 10px;
+}
 
 .menu-button {
   cursor: pointer;
@@ -45,7 +47,7 @@ header {
   transition: ease-in-out 180ms;
   border-radius: 10px;
   position: fixed;
-  top: 20px;
+  top: 21px;
   right: 80px;
   z-index: 3;
   &:hover{
