--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -36,6 +36,10 @@ header {
 
 .logo {
 margin-bottom: 10px;
+-moz-user-select: none;
+-webkit-user-select: none;
+-ms-user-select: none;
+user-select: none;
 }
 
 .menu-button {
