--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
         ]
       </p>
     </div>
-    <div class="menu-button" (click)="toggleActive()">
+    <div id="menuButton" class="menu-button" (click)="toggleActive()">
       <svg class="ham hamRotate ham4" [class.active]="isActive" viewBox="15 15 70 70" width="50">
         <path class="line top" d="m 70,33 h -40 c 0,0 -8.5,-0.149796 -8.5,8.5 0,8.649796 8.5,8.5 8.5,8.5 h 20 v -20"/>
         <path class="line middle" d="m 70,50 h -40"/>
@@ -16,6 +16,18 @@
     </div>
   </header>
   <div class="menu" [class.active]="isActive">
-    <!-- Menüinhalte hier -->
+    <div class="menu-info">
+      <span>
+        <p>About me</p>
+      </span>
+      <span>
+        <p>My skills</p>
+      </span>
+      <span>
+        <p>Portfolio</p>
+      </span>
+    </div>
+    <div class="menu-socials">
+    </div>
   </div>
 </body>
