--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -20,6 +20,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Roboto', sans-serif;
   }
 
   .letterY {
@@ -75,7 +76,7 @@ header {
 }
 .line {
   fill: none;
-  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  transition: stroke-dasharray 800ms, stroke-dashoffset 800ms;
   stroke: #000;
   stroke-width: 5.5;
   stroke-linecap: round;
@@ -103,8 +104,27 @@ header {
   transform: translateY(-100%);
   transition: transform 0.4s ease-in-out;
   z-index: 1;
+  overflow: hidden;
 }
 
 .menu.active {
+  transform: translateY(0);
+}
+
+.menu-info {
+  width: 100%;
+  height: 60%;
+}
+
+.menu-socials {
+  width: 100%;
+  height: 40%;
+  background-color: #000000;
+  transform: translateY(100%);
+  transition: transform 0.4s ease-in-out 0.4s;
+  clip-path: polygon(0% 0%, 100% 50%, 100% 100%, 0% 100%);
+}
+
+.menu.active .menu-socials {
   transform: translateY(0);
 }
