--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Syne';
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
