--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -113,12 +113,40 @@ header {
 
 .menu-info {
   width: 100%;
-  height: 60%;
+  height: 55%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  span {
+    width: 580px;
+    text-align: center;
+  }
+  p {
+    font-family: "Syne";
+    font-weight: 700;
+    font-size: 96px;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 55px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    position: relative;
+  }
+  p::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 39px;
+    height: 52px;
+    border-bottom: 4px solid black;
+    border-left: 4px solid black;
+  }
 }
 
 .menu-socials {
   width: 100%;
-  height: 40%;
+  height: 45%;
   background-color: #000000;
   transform: translateY(100%);
   transition: transform 0.4s ease-in-out 0.4s;
