fixed some animations and added social media icons

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -20,7 +20,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
   }
 
   .letterY {
@@ -113,7 +113,7 @@ header {
 
 .menu-info {
   width: 100%;
-  height: 55%;
+  height: 65%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -129,7 +129,7 @@ header {
     font-size: 96px;
     margin: 0;
     margin-top: 10px;
-    margin-bottom: 55px;
+    margin-bottom: 100px;
     padding-bottom: 10px;
     cursor: pointer;
     position: relative;
@@ -147,7 +147,8 @@ header {
       height: 52px;
       border-bottom: 4px solid black;
       border-left: 4px solid black;
-      transition: height 70ms ease-in-out, width 200ms ease-in-out 70ms, left 200ms ease-in-out 70ms;
+      transition: height 100ms ease-in-out 100ms, width 200ms ease-in-out, left 200ms ease-in-out;
+      animation: revertColor 0.2s ease-in-out forwards;
     }
 
     &:hover::after {
@@ -156,7 +157,9 @@ header {
       bottom: 0;
       height: 0;
       width: 280px;
-      animation: changeColor 0.5s ease-in-out 100ms forwards;
+      border-bottom: 4px solid black;
+      transition: height 50ms ease-in-out, width 200ms ease-in-out, left 200ms ease-in-out;
+      animation: changeColor 0.5s ease-in-out forwards;
     }
   }
 }
@@ -167,19 +170,19 @@ header {
     border-left: 4px solid black;
   }
   50% {
-    border-bottom: 4px solid rgb(255, 155, 41);
-    border-left: 4px solid rgb(255, 155, 41);
+    border-bottom: 4px solid #5988FF;
+    border-left: 4px solid #5988FF;
   }
   100% {
-    border-bottom: 4px solid rgb(255, 155, 41);
-    border-left: 4px solid rgb(255, 155, 41);
+    border-bottom: 4px solid #5988FF;
+    border-left: 4px solid #5988FF;
   }
 }
 
 @keyframes revertColor {
   0% {
-    border-bottom: 4px solid rgb(255, 155, 41);
-    border-left: 4px solid rgb(255, 155, 41);
+    border-bottom: 4px solid #5988FF;
+    border-left: 4px solid #5988FF;
   }
   100% {
     border-bottom: 4px solid black;
@@ -189,13 +192,53 @@ header {
 
 .menu-socials {
   width: 100%;
-  height: 45%;
+  height: 35%;
   background-color: #000000;
   transform: translateY(100%);
   transition: transform 0.4s ease-in-out 0.4s;
   clip-path: polygon(0% 0%, 100% 50%, 100% 100%, 0% 100%);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
 .menu.active .menu-socials {
   transform: translateY(0);
+}
+
+
+.text-email{
+  width: 500px;
+  height: 230px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-left: 60px;
+  p{
+    margin: 0;
+  }
+  .text{
+    font-family: "Syne";
+    font-weight: 800;
+    font-size: 78px;
+  }
+  .email{
+    font-size: 23px;
+    font-family: "Overpass";
+    margin-top: 10px;
+  }
+}
+
+.social-network {
+  width: 500px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 60px;
+  img {
+    width: 30px;
+    height: 30px;
+  }
 }
