--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,9 +9,10 @@
     </div>
     <div id="menuButton" class="menu-button" (click)="toggleActive()">
       <svg class="ham hamRotate ham4" [class.active]="isActive" viewBox="15 15 70 70" width="50">
-        <path class="line top" d="m 70,33 h -40 c 0,0 -8.5,-0.149796 -8.5,8.5 0,8.649796 8.5,8.5 8.5,8.5 h 20 v -20"/>
-        <path class="line middle" d="m 70,50 h -40"/>
-        <path class="line bottom" d="m 30,67 h 40 c 0,0 8.5,0.149796 8.5,-8.5 0,-8.649796 -8.5,-8.5 -8.5,-8.5 h -20 v 20"/>
+        <path class="line top" d="m 70,33 h -40 c 0,0 -8.5,-0.149796 -8.5,8.5 0,8.649796 8.5,8.5 8.5,8.5 h 20 v -20" />
+        <path class="line middle" d="m 70,50 h -40" />
+        <path class="line bottom"
+          d="m 30,67 h 40 c 0,0 8.5,0.149796 8.5,-8.5 0,-8.649796 -8.5,-8.5 -8.5,-8.5 h -20 v 20" />
       </svg>
     </div>
   </header>
@@ -28,6 +29,19 @@
       </span>
     </div>
     <div class="menu-socials">
+      <div class="text-email">
+        <span>
+          <p class="text">Say Hi!</p>
+          <p class="email">y.filiz.ch@gmail.com</p>
+        </span>
+      </div>
+      <div class="social-network">
+        <div>
+          <img src="assets/img/github.svg" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+        </div>
+      </div>
     </div>
   </div>
 </body>
