now the icons can be seen

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,8 +38,8 @@
       <div class="social-network">
         <div>
           <img src="assets/img/github.svg" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
+          <img src="assets/img/email.svg" alt="">
+          <img src="assets/img/linkedin.svg" alt="">
         </div>
       </div>
     </div>
