--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -147,7 +147,8 @@ header {
       height: 52px;
       border-bottom: 4px solid black;
       border-left: 4px solid black;
-      transition: height 100ms ease-in-out 100ms, width 200ms ease-in-out, left 200ms ease-in-out;
+      transition: height 100ms ease-in-out 100ms, width 200ms ease-in-out,
+        left 200ms ease-in-out;
       animation: revertColor 0.2s ease-in-out forwards;
     }
 
@@ -158,7 +159,8 @@ header {
       height: 0;
       width: 280px;
       border-bottom: 4px solid black;
-      transition: height 50ms ease-in-out, width 200ms ease-in-out, left 200ms ease-in-out;
+      transition: height 50ms ease-in-out, width 200ms ease-in-out,
+        left 200ms ease-in-out;
       animation: changeColor 0.5s ease-in-out forwards;
     }
   }
@@ -170,19 +172,19 @@ header {
     border-left: 4px solid black;
   }
   50% {
-    border-bottom: 4px solid #5988FF;
-    border-left: 4px solid #5988FF;
+    border-bottom: 4px solid #5988ff;
+    border-left: 4px solid #5988ff;
   }
   100% {
-    border-bottom: 4px solid #5988FF;
-    border-left: 4px solid #5988FF;
+    border-bottom: 4px solid #5988ff;
+    border-left: 4px solid #5988ff;
   }
 }
 
 @keyframes revertColor {
   0% {
-    border-bottom: 4px solid #5988FF;
-    border-left: 4px solid #5988FF;
+    border-bottom: 4px solid #5988ff;
+    border-left: 4px solid #5988ff;
   }
   100% {
     border-bottom: 4px solid black;
@@ -206,8 +208,7 @@ header {
   transform: translateY(0);
 }
 
-
-.text-email{
+.text-email {
   width: 500px;
   height: 230px;
   display: flex;
@@ -215,15 +216,15 @@ header {
   align-items: center;
   color: white;
   margin-left: 60px;
-  p{
+  p {
     margin: 0;
   }
-  .text{
+  .text {
     font-family: "Syne";
     font-weight: 800;
     font-size: 78px;
   }
-  .email{
+  .email {
     font-size: 23px;
     font-family: "Overpass";
     margin-top: 10px;
@@ -237,8 +238,19 @@ header {
   justify-content: center;
   align-items: center;
   margin-right: 60px;
+  div {
+    display: flex;
+    align-items: center;
+  }
   img {
     width: 30px;
     height: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    cursor: pointer;
+    transition: ease-in-out 150ms;
+    &:hover {
+      margin-bottom: 30px;
+    }
   }
 }
