fixed some animation/hover bugs

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,10 +36,16 @@
         </span>
       </div>
       <div class="social-network">
-        <div>
-          <img src="assets/img/github.svg" alt="">
-          <img src="assets/img/email.svg" alt="">
-          <img src="assets/img/linkedin.svg" alt="">
+        <div class="icons">
+          <div class="icon">
+            <img src="assets/img/github.svg" alt="">
+          </div>
+          <div class="icon">
+            <img src="assets/img/email.svg" alt="">
+          </div>
+          <div class="icon">
+            <img src="assets/img/linkedin.svg" alt="">
+          </div>
         </div>
       </div>
     </div>
