--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,35 +19,41 @@
   <div class="menu" [class.active]="isActive">
     <div class="menu-info">
       <span>
-        <p>About me</p>
+        <p class="p-about">About me</p>
       </span>
       <span>
-        <p>My skills</p>
+        <p class="p-skills">My skills</p>
       </span>
       <span>
-        <p>Portfolio</p>
+        <p class="p-portfolio">Portfolio</p>
       </span>
     </div>
     <div class="menu-socials">
       <div class="text-email">
         <span>
-          <p class="text">Say Hi!</p>
-          <p class="email">y.filiz.ch@gmail.com</p>
+            <p class="text">Say Hi!</p>
+            <div class="copy-email">
+              <p class="email">y.filiz.ch@gmail.com</p>
+              <div class="icon-container">
+                <img src="assets/img/copy.svg" alt="" class="default-icon">
+                <img src="assets/img/copy-hover.svg" alt="" class="hover-icon">
+              </div>
+            </div>
         </span>
       </div>
-      <div class="social-network">
-        <div class="icons">
-          <div class="icon">
-            <img src="assets/img/github.svg" alt="">
-          </div>
-          <div class="icon">
-            <img src="assets/img/email.svg" alt="">
-          </div>
-          <div class="icon">
-            <img src="assets/img/linkedin.svg" alt="">
-          </div>
-        </div>
+        <div class="social-network">
+    <div class="icons">
+      <div class="icon">
+        <img src="assets/img/github.svg" alt="">
       </div>
+      <div class="icon">
+        <img src="assets/img/email.svg" alt="">
+      </div>
+      <div class="icon">
+        <img src="assets/img/linkedin.svg" alt="">
+      </div>
+    </div>
+  </div>
     </div>
   </div>
 </body>
