--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -232,7 +232,7 @@ header {
 
 .text-email {
   width: 500px;
-  height: 230px;
+  height: 210px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -366,4 +366,50 @@ header {
   transform-origin: center left;
 }
 
+.popup-email-confirmation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+  opacity: 0;
+  animation: slideIn 0.4s forwards;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 
+.popup-email-confirmation.hide {
+  animation: slideOut 0.4s forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+}
+
+.popup-text {
+  height: 20px;
+  display: flex;
+  justify-content: flex-start;
+  p{
+    margin: 0;
+  }
+}
