--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -372,7 +372,7 @@ header {
   align-items: center;
   padding-top: 5px;
   opacity: 0;
-  animation: slideIn 0.4s forwards;
+  animation: slideInpopup-email-confirmation 0.4s forwards;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -380,10 +380,10 @@ header {
 }
 
 .popup-email-confirmation.hide {
-  animation: slideOut 0.4s forwards;
+  animation: slideOutpopup-email-confirmation 0.4s forwards;
 }
 
-@keyframes slideIn {
+@keyframes slideInpopup-email-confirmation {
   0% {
     transform: translateX(-10%);
     opacity: 0;
@@ -394,7 +394,7 @@ header {
   }
 }
 
-@keyframes slideOut {
+@keyframes slideOutpopup-email-confirmation {
   0% {
     transform: translateX(0);
     opacity: 1;
