--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,6 @@ body {
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
+  background-image: url(assets/img/backgroundimg.jpg);
+  background-repeat: repeat;
 }
