--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -7,5 +7,12 @@
       <p>Yusuf Filiz</p>
     </div>
   </div>
-  <div class="title-semial-scroll"></div>
+  <div class="title-email-scroll">
+    <div class="title-email">
+      <p>y.filiz.ch@gmail.com</p>
+    </div>
+    <div class="title-scroll">
+      <p>Scroll Down</p>
+    </div>
+  </div>
 </div>
