--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -7,7 +7,7 @@
 }
 
 .title-headline {
-  height: 70vh;
+  height: 90vh;
   width: 920px;
   display: flex;
   flex-direction: column;
@@ -41,10 +41,23 @@
 }
 
 .title-email-scroll {
-  height: 30vh;
-  p {
-    margin: 0;
-    font-size: 2px;
-    font-weight: 600;
-  }
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: cetner;
+  background-color: red;
 }
+
+.title-email {
+  width: 50%;
+}
+
+.title-scroll{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 50%;
+  background-color: aqua;
+}
+
