fiished the title component

--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -12,7 +12,11 @@
       <p>y.filiz.ch@gmail.com</p>
     </div>
     <div class="title-scroll">
-      <p>Scroll Down</p>
+      <div class="arrow-text">
+        <img src="assets/img/scroll-arrow.svg" alt="">
+        Scroll <br>
+         Down
+      </div>
     </div>
   </div>
 </div>
