--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -99,7 +99,7 @@ header {
   top: 91px;
   left: 0;
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   background: #fffcf3;
   transform: translateY(-100%);
   transition: transform 0.4s ease-in-out;
@@ -128,6 +128,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   span {
     width: 580px;
@@ -238,6 +239,7 @@ header {
   align-items: center;
   color: white;
   margin-left: 60px;
+  margin-bottom: 91px;
 
   p {
     margin: 0;
@@ -270,6 +272,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 91px;
 
   div {
     display: flex;
