--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -7,7 +7,7 @@
 }
 
 .title-headline {
-  height: 90vh;
+  height: 80vh;
   width: 920px;
   display: flex;
   flex-direction: column;
@@ -31,7 +31,7 @@
     font-size: 48px;
     font-weight: 600;
     font-family: "Overpass";
-    color: #5988ff;;
+    color: #5988ff;
   }
 
   .line {
@@ -42,22 +42,69 @@
 
 .title-email-scroll {
   width: 100%;
-  height: 10vh;
+  height: 20vh;
   display: flex;
   justify-content: center;
-  align-items: cetner;
-  background-color: red;
+  align-items: flex-end;
 }
 
 .title-email {
+  display: flex;
+  align-items: flex-end;
   width: 50%;
+  padding-left: 60px;
+  margin-bottom: 80px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  p {
+    transition: ease-in-out 100ms;
+    cursor: pointer;
+    transform: rotate(-90deg);
+    &:hover {
+      color: #5988ff;
+    }
+  }
 }
 
-.title-scroll{
+.title-scroll {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  height: fit-content;
   width: 50%;
-  background-color: aqua;
+  padding-right: 60px;
+  margin-bottom: 30px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
 }
 
+.arrow-text {
+  width: 50px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  img {
+    margin-bottom: 30px;
+    width: 30px;
+    animation: scroll 1.5s linear infinite;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(-31px);
+  }
+  50% {
+    transform: translateY(30px);
+  }
+  100% {
+    transform: translateY(-30px);
+  }
+}
