--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,25 @@
-<p>about-me works!</p>
+<div class="about-me-section">
+  <div class="about-me">
+    <div class="about-me-headline-img">
+      <div class="about-me-headline-text-img">
+        <div>
+          <h1>About me</h1>
+          <p>I am a dedicated Front-end developer based in Wolfhalden, Switzerland, passionate about transforming creative concepts into engaging digital solutions. I enjoy collaborating with designers and companies to bring their visions to life, ensuring seamless user experiences and visually stunning websites.</p><br>
+          <p>I am excited to take the next step in my developer career and secure a junior web developer position that challenges me to grow and further refine my skills. By joining a dynamic team, I am eager to contribute my technical proficiency and innovative mindset to deliver exceptional results.</p><br>
+          <p>If you believe I would be a great fit for your projects, I invite you to reach out and connect with me. Let's discuss how we can collaborate to create impactful and cutting-edge web solutions. Don't hesitate to contact me today!</p>
+          <div>
+            <button>Let's talk</button>
+          </div>
+        </div>
+        <div class="about-me-img">
+          <img src="assets/img/photo.JPG" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="arrow-down">
+      <div>
+        <img src="assets/img/arrow-scroll-down-left.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
