--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,5 +1,9 @@
 .about-me-section {
   height: 100vh;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .about-me {
@@ -27,9 +31,21 @@
     div {
       display: flex;
       justify-content: center;
-      margin-top: 32px;
+      margin-top: 96px;
       button {
-
+        width: 213px;
+        height: 68px;
+        border: 4px solid #000;
+        background-color: #fffcf3;
+        padding: 10px 30px;
+        font-size: 23px;
+        font-family: "Overpass";
+        cursor: pointer;
+        transition: ease-in-out 100ms;
+        &:hover {
+          width: 253px;
+          font-weight: 600;
+        }
       }
     }
     h1{
@@ -37,11 +53,15 @@
       font-family: "Syne";
       font-weight: 800;
       margin: 0;
-      margin-bottom: 32px;
+      margin-bottom: 48px;
+      transition: ease-in-out 100ms;
+      &:hover{
+        color: #5988ff;
+      }
     }
     p{
       margin: 0;
-      font-size: 21px;
+      font-size: 23px;
       font-family: "Overpass";
       text-align: justify;
     }
