fixed some bugs

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -80,6 +80,11 @@
     margin-bottom: 64px;
   }
 }
+.img-border {
+  height: 554.4px;
+  width: 424px;
+  border: 4px solid black;
+}
 
 .arrow-down {
   height: 20%;
