--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -13,6 +13,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   h1 {
     margin: 0;
     font-size: 128px;
