--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -26,7 +26,7 @@
   div {
     margin-top: 0;
     margin-bottom: 0;
-    margin-left: 64px;
+    margin-left: 32px;
     margin-right: 32px;
     div {
       display: flex;
@@ -73,28 +73,44 @@
   width: 50%;
   display: flex;
   align-items: flex-end;
-  img {
-    height: 554.4px;
-    width: 424px;
-    margin-left: 32px;
-    margin-bottom: 64px;
+  .img-with-border {
+    position: relative;
+
+    img {
+      height: 554.4px;
+      width: 424px;
+      margin-left: 32px;
+      margin-bottom: 64px;
+    }
+    .img-border {
+      position: absolute;
+      top: -96px;
+      right: -32px;
+      z-index: 1;
+      height: 546.4px;
+      width: 416px;
+      border: 4px solid transparent;
+      transition: border-color 150ms ease-in-out, top 150ms ease-in-out, right 150ms ease-in-out;
+
+      &:hover {
+        border-color: #000;
+        top: -80px;
+        right: -48px;
+      }
+    }
   }
 }
-.img-border {
-  height: 554.4px;
-  width: 424px;
-  border: 4px solid black;
-}
+
 
 .arrow-down {
   height: 20%;
   display: flex;
   justify-content: center;
   div {
-    width: 1000px;
+    width: 1300px;
+    padding-right: 400px;
     display: flex;
     justify-content: flex-end;
-    padding-right: 300px;
     img {
       cursor: pointer;
       object-fit: cover;
