--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 8px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 ::-webkit-scrollbar-thumb {
