--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,1 +1,15 @@
-<p>my-skills works!</p>
+<div class="my-skills-section">
+  <div class="my-skills-container">
+    <span>
+      <p>My Skills</p>
+    </span>
+    <div class="skills-icon-container">
+      <div class="part1-icons">
+
+      </div>
+      <div class="part2-icons">
+
+      </div>
+    </div>
+  </div>
+</div>
