made some css changes

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,7 +2,7 @@
   <div class="about-me">
     <div class="about-me-headline-img">
       <div class="about-me-headline-text-img">
-        <div>
+        <div class="text-padding">
           <h1>About me</h1>
           <p>I am a junior Front-end developer based in Wolfhalden, Switzerland, passionate about transforming creative
             concepts into engaging digital solutions. I enjoy collaborating with designers and companies to bring their
