--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -19,15 +19,18 @@
 
 .about-me-headline-text-img {
   height: 100%;
-  width: 1300px;
+  width: 1239px;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .text-padding {
+    padding-right: 32px;
+  }
+
   div {
     margin-top: 0;
     margin-bottom: 0;
-    margin-left: 32px;
-    margin-right: 32px;
     div {
       display: flex;
       justify-content: center;
@@ -85,7 +88,7 @@
     .img-border {
       position: absolute;
       top: -96px;
-      right: -32px;
+      right: 0;
       height: 546.4px;
       width: 416px;
       border: 4px solid transparent;
@@ -94,7 +97,7 @@
       &:hover {
         border-color: #000;
         top: -80px;
-        right: -48px;
+        right: -17px;
       }
     }
   }
