--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -4,9 +4,11 @@
       <p>My Skills</p>
     </span>
     <div class="skills-icon-container">
-      <div class="icon" *ngFor="let icon of icons; let i = index">
-        <img [src]="icon" [alt]="skills[i]">
-        <p>{{ skills[i] }}</p>
+      <div class="icons">
+        <div class="icon" *ngFor="let icon of icons; let i = index">
+          <img [src]="icon" [alt]="skills[i]" draggable="false">
+          <p>{{ skills[i] }}</p>
+        </div>
       </div>
     </div>
   </div>
