--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="title-scroll">
       <div class="arrow-text">
-        <img src="assets/img/scroll-arrow.svg" alt="">
+        <img src="assets/img/scroll-arrow.svg" alt="" draggable="false">
         Scroll <br>
          Down
       </div>
