--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -96,6 +96,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  font-family: "Overpass";
   img {
     margin-bottom: 30px;
     width: 30px;
