--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -58,6 +58,12 @@
       align-items: center;
       text-align: center;
       margin: 60px;
+      p {
+        font-family: "Overpass";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+      }
     }
   }
 }
