added a click function that scrolls to a other component

--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -12,10 +12,10 @@
       <p>y.filiz.ch@gmail.com</p>
     </div>
     <div class="title-scroll">
-      <div class="arrow-text">
+      <div class="arrow-text" (click)="scrollToElement('aboutMe')">
         <img src="assets/img/scroll-arrow.svg" alt="" draggable="false">
         Scroll <br>
-         Down
+        Down
       </div>
     </div>
   </div>
