--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-title></app-title>
-<app-about-me></app-about-me>
-<app-my-skills></app-my-skills>
+<app-title id="title"></app-title>
+<app-about-me id="aboutMe"></app-about-me>
+<app-my-skills id="mySkills"></app-my-skills>
 <app-not-done-yet></app-not-done-yet>
