--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -5,12 +5,16 @@
     </span>
     <div class="skills-icon-container">
       <div class="icons">
-        <div class="icon" *ngFor="let icon of icons; let i = index">
-          <img [src]="icon" [alt]="skills[i]" draggable="false">
+        <div class="icon" *ngFor="let icon of icons; let i = index"
+          (mouseover)="hoveredIndex = i; lastHoveredIndex = null"
+          (mouseout)="lastHoveredIndex = i; hoveredIndex = null">
+          <img [src]="icon" [alt]="skills[i]" draggable="false" [ngClass]="{
+            'flip-horizontal-bottom': i === hoveredIndex,
+            'flip-horizontal-top': i === lastHoveredIndex
+          }">
           <p>{{ skills[i] }}</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-
