added a img that makes you scroll to the next component on click

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="arrow-down" (click)="scrollToElement('mySkills')">
       <div>
-        <img src="assets/img/arrow-scroll-down-left.png" alt="">
+        <img src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
       </div>
     </div>
   </div>
