--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -2,8 +2,18 @@
   height: 100vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  .skills-container-icons {
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 32px;
+  }
+
   .my-skills-container {
     width: 1239px;
     height: 592px;
@@ -102,3 +112,19 @@
   opacity: 0;
 }
 
+.arrow-down {
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  div {
+    width: 1239px;
+    display: flex;
+    justify-content: flex-start;
+    img {
+      cursor: pointer;
+      transform: scaleX(-1);
+      object-fit: cover;
+      margin-left: 140px;
+    }
+  }
+}
