added elements to show my projects and provide them with links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-title id="title"></app-title>
 <app-about-me id="aboutMe"></app-about-me>
 <app-my-skills id="mySkills"></app-my-skills>
+<app-portfolio id="portfolio"></app-portfolio>
 <app-not-done-yet></app-not-done-yet>
