--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,28 @@
-<p>portfolio works!</p>
+<div class="portfolio-section">
+  <div class="portfolio-headline">
+    <h1>Portfolio</h1>
+    <p>This page is a sample of my work - please feel free to try them out.</p>
+  </div>
+  <div class="projects-section">
+    <div class="project">
+      <div><img src="" alt=""></div>
+      <div><p>01/05</p></div>
+    </div>
+    <div class="project">
+      <div><p>02/05</p></div>
+      <div><img src="" alt=""></div>
+    </div>
+    <div class="project">
+      <div><img src="" alt=""></div>
+      <div><p>03/05</p></div>
+    </div>
+    <div class="project">
+      <div><p>04/05</p></div>
+      <div><img src="" alt=""></div>
+    </div>
+    <div class="project">
+      <div><img src="" alt=""></div>
+      <div><p>05/05</p></div>
+    </div>
+  </div>
+</div>
