--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="arrow-down" (click)="scrollToElement('mySkills')">
+  <div class="arrow-down" (click)="scrollToElement('portfolio')">
     <div>
       <img src="assets/img/arrow-scroll-down-left.png" alt="" draggable="false">
     </div>
