--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,25 +4,78 @@
     <p>This page is a sample of my work - please feel free to try them out.</p>
   </div>
   <div class="projects-section">
-    <div class="project">
-      <div><img src="" alt=""></div>
-      <div><p>01/05</p></div>
+
+
+    <div *ngFor="let project of projects; index as i">
+      <div class="project" [ngClass]="{'project-reverse': i % 2 != 0}">
+        <div class="project-image">
+          <img [src]="project.image" alt="">
+          <div>
+            <img class="project-arrow" [ngClass]="{'project-arrow-reverse': i % 2 != 0}" src="assets/img/project-arrow.svg" alt="">
+          </div>
+        </div>
+        <div class="project-description">
+          <p>{{i + 1}}/0{{projects.length}}</p>
+          <div>
+            <h1>{{project.title}}</h1>
+            <p>{{project.techStack.join(' | ')}}</p>
+            <p>{{project.description}}</p>
+            <div class="project-buttons">
+              <a [href]="project.githubLink" target="_blank">Github</a>
+              <a [href]="project.liveTestLink" target="_blank">Live-Test</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+<!--     <div class="project">
+      <div class="project-image">
+        <img src="" alt="">
+        <div>
+          <img class="project-arrow" src="assets/img/project-arrow.svg" alt="">
+        </div>
+      </div>
+      <div class="project-description">
+        <p>01/05</p>
+        <div>
+          <h1>Join</h1>
+          <p>Angular | Typescript | HTML | CSS | Firebase</p>
+          <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
+          <div class="project-buttons">
+            <button>Github</button><button>Live-Test</button>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="project">
-      <div><p>02/05</p></div>
-      <div><img src="" alt=""></div>
-    </div>
-    <div class="project">
-      <div><img src="" alt=""></div>
-      <div><p>03/05</p></div>
-    </div>
-    <div class="project">
-      <div><p>04/05</p></div>
-      <div><img src="" alt=""></div>
-    </div>
-    <div class="project">
-      <div><img src="" alt=""></div>
-      <div><p>05/05</p></div>
-    </div>
+      <div class="project-description">
+        <p>02/05</p>
+        <div>
+          <h1>Join</h1>
+          <p>Angular | Typescript | HTML | CSS | Firebase</p>
+          <p>Task manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.</p>
+          <div class="project-buttons">
+            <button>Github</button><button>Live-Test</button>
+          </div>
+        </div>
+      </div>
+      <div class="project-image">
+        <img src="" alt="">
+        <div>
+          <img class="project-arrow-reverse" src="assets/img/project-arrow.svg" alt="">
+        </div>
+      </div>
+    </div> -->
   </div>
 </div>
