--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,4 +1,5 @@
 .portfolio-section {
+  padding-top: 140px;
   background-color: aqua;
   display: flex;
   justify-content: center;
@@ -31,12 +32,22 @@
 }
 
 .projects-section {
-  .project{
+  width: 1239px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  .project {
+    display: flex;
+    justify-content: space-between;
+    height: 460px;
+    width: 100%;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    background-color: rgb(75, 150, 75);
     img {
-
     }
-    p{
-      
+    p {
     }
   }
 }
