--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -7,26 +7,33 @@
 
 
 
-      <div *ngFor="let project of projects; index as i" class="project" [ngClass]="{'project-reverse': i % 2 != 0}">
-        <div class="project-image">
-          <img [src]="project.image" alt="">
-          <div>
-            <img class="project-arrow" [ngClass]="{'project-arrow-reverse': i % 2 != 0}" src="assets/img/project-arrow.svg" alt="">
-          </div>
+    <div *ngFor="let project of projects; index as i" class="project">
+      <div class="project-image" *ngIf="i % 2 == 0">
+        <img [src]="project.image" alt="">
+        <div>
+          <img class="project-arrow" src="assets/img/project-arrow.svg" alt="">
         </div>
-        <div class="project-description">
-          <p>{{i + 1}}/0{{projects.length}}</p>
-          <div>
-            <h1>{{project.title}}</h1>
-            <p>{{project.techStack.join(' | ')}}</p>
-            <p>{{project.description}}</p>
-            <div class="project-buttons">
-              <a [href]="project.githubLink" target="_blank">Github</a>
-              <a [href]="project.liveTestLink" target="_blank">Live-Test</a>
-            </div>
+      </div>
+      <div class="project-description">
+        <p>{{i + 1}}/0{{projects.length}}</p>
+        <div>
+          <h1>{{project.title}}</h1>
+          <p>{{project.techStack.join(' | ')}}</p>
+          <p>{{project.description}}</p>
+          <div class="project-buttons">
+            <a [href]="project.githubLink" target="_blank">Github</a>
+            <a [href]="project.liveTestLink" target="_blank">Live-Test</a>
           </div>
         </div>
       </div>
+      <div class="project-image" *ngIf="i % 2 != 0">
+        <img [src]="project.image" alt="">
+        <div>
+          <img class="project-arrow-reverse" src="assets/img/project-arrow.svg" alt="">
+        </div>
+      </div>
+    </div>
+
 
 
 
