--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -14,6 +14,7 @@
   align-items: center;
   flex-direction: column;
   background-color: red;
+  margin-bottom: 16px;
   h1 {
     font-family: "Syne";
     font-style: normal;
@@ -45,9 +46,26 @@
     margin-top: 16px;
     margin-bottom: 16px;
     background-color: rgb(75, 150, 75);
-    img {
+    .project-image {
+      width: 50%;
+      height: 100%;
+      background-color: rgb(75, 75, 150);
     }
-    p {
+    .project-description {
+      width: 50%;
+      height: 100%;
+      background-color: rgb(150, 75, 75);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      .project-number {
+        
+      }
+      .project-info {
+        width: 100%;
+        height: 50%;
+        background-color: rgb(150, 150, 75);
+      }
     }
   }
 }
