--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -59,11 +59,17 @@
       flex-direction: column;
       justify-content: space-between;
       .project-number {
-        
+        width: 100%;
+        height: 30%;
+        background-color: rgb(75, 150, 150);
+        p {
+          text-align: end;
+          margin: 0;
+        }
       }
       .project-info {
         width: 100%;
-        height: 50%;
+        height: 70%;
         background-color: rgb(150, 150, 75);
       }
     }
