--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,10 +1,13 @@
 .portfolio-section {
   padding-top: 140px;
-  background-color: aqua;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .portfolio-headline {
@@ -13,8 +16,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: red;
-  margin-bottom: 16px;
+  margin-bottom: 150px;
   h1 {
     font-family: "Syne";
     font-style: normal;
@@ -45,27 +47,32 @@
     justify-content: space-between;
     height: 460px;
     width: 100%;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    background-color: rgb(75, 150, 75);
+    margin-bottom: 130px;
+
 
     .project-image {
       width: 50%;
       height: 100%;
       background-color: rgb(75, 75, 150);
+
+      .project-arrow {
+
+      }
+
+      .project-arrow-reverse {
+        transform: scaleX(-1);
+      }
     }
     .project-description-container {
       width: 50%;
       height: 100%;
-      background-color: rgb(150, 75, 75);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
 
       .project-number {
         width: 100%;
-        height: 30%;
-        background-color: rgb(75, 150, 150);
+        height: 20%;
 
         p {
           text-align: end;
@@ -78,8 +85,7 @@
       }
       .project-number-reverse {
         width: 100%;
-        height: 30%;
-        background-color: rgb(75, 150, 150);
+        height: 20%;
 
         p {
           text-align: start;
@@ -93,8 +99,7 @@
 
       .project-info {
         width: 100%;
-        height: 70%;
-        background-color: rgb(150, 150, 75);
+        height: 80%;
 
         .project-name {
           padding-left: 32px;
@@ -127,8 +132,7 @@
 
       .project-info-reverse {
         width: 100%;
-        height: 70%;
-        background-color: rgb(150, 150, 75);
+        height: 80%;
 
         .project-name-reverse {
           padding-left: 0;
@@ -164,6 +168,7 @@
 
       .project-buttons {
         padding-left: 32px;
+        padding-top: 16px;
         button {
           width: 140px;
           height: 58px;
@@ -185,6 +190,7 @@
 
       .project-buttons-reverse {
         padding-left: 0;
+        padding-top: 16px;
         button {
           width: 140px;
           height: 58px;
