added some projects for testing out the design

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -8,8 +8,8 @@
 
 
     <div *ngFor="let project of projects; index as i" class="project">
-      <div class="project-image" *ngIf="i % 2 == 0">
-        <img [src]="project.image" alt="" draggable="false">
+      <div class="project-image-container" *ngIf="i % 2 == 0">
+        <img [src]="project.image" alt="" class="project-image" draggable="false">
         <div class="project-border">
           <img class="project-arrow" src="assets/img/project-arrow.svg" alt="" draggable="false">
         </div>
@@ -28,8 +28,8 @@
           </div>
         </div>
       </div>
-      <div class="project-image" *ngIf="i % 2 != 0">
-        <img [src]="project.image" alt="" draggable="false">
+      <div class="project-image-container" *ngIf="i % 2 != 0">
+        <img [src]="project.image" alt="" class="project-image" draggable="false">
         <div class="project-border-reverse">
           <img class="project-arrow-reverse" src="assets/img/project-arrow.svg" alt="" draggable="false">
         </div>
